WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53679
Regression with commit
r77425
https://bugs.webkit.org/show_bug.cgi?id=53679
Summary
Regression with commit r77425
Jonathan Backer
Reported
2011-02-03 06:51:56 PST
Go to the above URL with --accelerated-layers-enabled on a recent chromium linux build. The following assert happens: ASSERTION FAILED: m_ptr (third_party/WebKit/Source/JavaScriptCore/wtf/OwnPtr.h:66 typename WTF::RemovePointer<T>::Type* WTF::OwnPtr<T>::operator->() const [with T = WebCore::RenderSurfaceChromium]) I've narrowed it down to
r77425
by building from source (
https://bugs.webkit.org/show_bug.cgi?id=53179
).
Attachments
Patch
(1.74 KB, patch)
2011-02-03 13:48 PST
,
Vangelis Kokkevis
kbr
: review+
vangelis
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vangelis Kokkevis
Comment 1
2011-02-03 13:48:04 PST
Created
attachment 81109
[details]
Patch
Kenneth Russell
Comment 2
2011-02-03 13:49:51 PST
Comment on
attachment 81109
[details]
Patch OK.
Kenneth Russell
Comment 3
2011-02-03 13:50:39 PST
Could you please make this bug depend on the earlier one which introduced the regression?
Vangelis Kokkevis
Comment 4
2011-02-03 13:51:53 PST
Committed
r77532
: <
http://trac.webkit.org/changeset/77532
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug