2011-02-03  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] Fixing a compositor crash occurring on layers
        without an associated RenderSurface.
        https://bugs.webkit.org/show_bug.cgi?id=53679
        Regression was introduced by in r77425

        Test: http://webkit.org/blog/386/3d-transforms/ doesn't crash
        anymore.

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawLayer):


Canonical link: https://commits.webkit.org/67614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77532 268f45cc-cd09-0410-ab3c-d52691b4dbfc